--- a/src/style.css
+++ b/src/style.css
@@ -54,6 +54,21 @@ section{
     box-shadow: 5px 5px 10px rgba(31, 29, 29, 0.185);
 }
 
+.form-modal{
+    text-align: center;
+    display: block;
+    padding: 50px 50px;
+}
+
+.input-modal{
+    text-align: center;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 10px rgba(31, 29, 29, 0.185);
+}
+
 .form-button{
     align-items: center;
     width: 40%;
