--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ section{
 
 .content{
     text-align: center;
+    word-wrap: break-word;
+    height: 80px;
 }
 
 .titulo-principal{
@@ -45,14 +47,16 @@ section{
 }
 
 .form-input{
-    text-align: center;
+    text-align: left;
     display: block;
+    font: normal 15pt arial;
     margin: 0 0px 20px;
-	padding: 50px 25px;
+	padding: 10px 20px;
     width: 100%;
     border-radius: 5px;
     box-shadow: 5px 5px 10px rgba(31, 29, 29, 0.185);
 }
+
 
 .form-modal{
     text-align: center;
@@ -67,6 +71,19 @@ section{
     margin-bottom: 15px;
     border-radius: 5px;
     box-shadow: 3px 3px 10px rgba(31, 29, 29, 0.185);
+}
+
+.info-button{
+    padding: 15px 0;
+    width: 5%;
+    background: rgb(228, 191, 122);
+    color: white; 
+    font-weight: bold;
+	font-size: 18px;
+	border: none;
+	border-radius: 5px;
+	transition: 1s background;
+    cursor: pointer;
 }
 
 .form-button{
@@ -85,6 +102,10 @@ section{
 
 .form-button:hover {
 	background: rgb(223, 148, 58);
+    transform: scale(1.05);
+}
+.info-button:hover{
+    background: rgb(223, 148, 58);
     transform: scale(1.05);
 }
 
@@ -106,10 +127,10 @@ section{
 }
 
 .modal{
-    text-align: center;
-    font: normal 20pt arial;
+    text-align: justify;
+    font: normal 15pt arial;
     background: white;
-    width: 30%;
+    width: 60%;
     min-width: 300px;
     padding: 40px;
     border: 10px solid #dbcbbe;
@@ -145,3 +166,4 @@ section{
     cursor: pointer;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .3);
 }
+
